Change: MapsAPI => MapBox; GeocodingAPI ok; Fix: Map ok but not render in page; Create polygons

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,16 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-.map {
-  border: 2px solid white;
-  box-shadow: 0px 0px 10px black;
-}
-
-.marker {
-  margin-top: -30px;
-  font-weight: bold;
-  color: white;
-}
-
 h1 {
   margin-bottom: 1rem;
   color: red;
@@ -20,6 +9,15 @@ h1 {
   transition: 0.3s;
 }
 
+.map {
+  border: 2px solid white;
+  box-shadow: 0px 0px 10px black;
+}
+
+.map-container {
+  width: 10rem;
+  height: 10rem;
+}
 
 .bshow-text{
   font-size: 16px;
